# lan-device-manager

./: .gitignore  GIT_WORKFLOW.md  License  PROGRESS_REPORT.md  PROGRESS_REPORT_PHASE2.md  PROGRESS_REPORT_PHASE3.md  PROJECT_REPORT.md  README.md  README_CN.md  commit.sh  init.md  log.pcapng  log.txt  test_api.ps1
.github/workflows/: release-android.yml  release-windows.yml
agent_workspace/desgin/reference_code/server/: mdns.rs  tcp_server.rs
agent_workspace/desgin/ui/client/android/hostmaster-pro (1)/: App.tsx  index.html  metadata.json  package.json  types.ts
agent_workspace/desgin/ui/client/android/hostmaster-pro (1)/pages/: DiscoverHosts.tsx  HostDetail.tsx  HostsList.tsx
agent_workspace/desgin/ui/server/: change_password.html  main.html
agent_workspace/desgin/ui/server/stitch_remote_access_main_dashboard/change_password_modal_and_success_state/: code.html
agent_workspace/desgin/ui/server/stitch_remote_access_main_dashboard/remote_access_main_dashboard/: code.html
agent_workspace/process_report/: multi_device_test_report.md  report_2026_02_03_10_25.md
agent_workspace/requirement/: requirement_document.md
lan-android/: PROJECT_PROGRESS.md  index.html  package-lock.json  package.json  vite.config.ts
lan-android/public/fonts/: fonts.css
lan-android/src/: App.css  App.tsx  TestApp.tsx  types.ts
lan-android/src-tauri/: Cargo.toml  tauri.conf.json
lan-android/src-tauri/.cargo/: config.toml
lan-android/src-tauri/src/: api.rs  crypto.rs  lib.rs  main.rs  mdns.rs  models.rs  state.rs
lan-android/src/components/: Icons.tsx
lan-android/src/i18n/: index.ts
lan-android/src/i18n/locales/: en.json  zh.json
lan-android/src/pages/: DiscoverHosts.tsx  HostDetail.tsx  HostsList.tsx
lan-android/src/utils/: errorParser.ts
lan-windows/: PROJECT_PROGRESS.md  PROJECT_REPORT.md  package-lock.json  package.json  run.bat  开发报告.md
lan-windows/src/: App.css  App.tsx
lan-windows/src-tauri/: Cargo.toml  tauri.conf.json
lan-windows/src-tauri/capabilities/: default.json
lan-windows/src-tauri/src/: api.rs  auth.rs  command.rs  config.rs  device_id.rs  lib.rs  logger.rs  main.rs  mdns.rs  models.rs  state.rs  websocket.rs
lan-windows/src/components/: LoadingScreen.css  LoadingScreen.tsx  Settings.css  Settings.tsx  TitleBar.css  TitleBar.tsx
lan-windows/src/i18n/locales/: en.json  zh.json
lan-windows/src/utils/: performanceMonitor.ts  timerManager.ts  useTimerManager.ts
