[package]
name = "lan-android"
version = "0.1.0"
description = "LanDevice Manager Android Client"
authors = ["you"]
edition = "2021"

[lib]
name = "lan_android_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mdns-sd = "0.11"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
dirs = "5.0"

[target.'cfg(target_os = "android")'.dependencies]
tokio = { version = "1", features = ["full"] }
